    all lower-case names.
  * Fix ikiwiki-update-wikilist -r to actually work.
  * comments: collect metadata in a scan-phase preprocess hook, which
    fixes sorting comments by date. (smcv)
  * Run scan hooks for internal pages (preprocess hooks already run in scan
    mode) (smcv)
  * inline: Handle obfuscated urls, such as the mailto urls generated by
    markdown when forcing urls absolute.

 -- Joey Hess <joeyh@debian.org>  Thu, 09 Jun 2011 10:06:44 -0400

ikiwiki (3.20110608) unstable; urgency=high

  * ikiwiki-mass-rebuild: Fix tty hijacking vulnerability by using su.
    (Once su's related bug #628843 is fixed.) Thanks, Ludwig Nussel.
    (CVE-2011-1408)
  * search: Update search page when page.tmpl or searchquery.tmpl are locally
    modified.

 -- Joey Hess <joeyh@debian.org>  Fri, 03 Jun 2011 20:30:35 -0400

ikiwiki (3.20110431) unstable; urgency=low

  * Danish translation update. Closes: #625721
  * Danish underlay translation update. Closes: #625765
    (Thanks, Jonas Smedegaard)
  * Support YAML::XS by not passing decoded unicode to Load. Closes: #625713
  * openid, aggregate, pinger: Use Net::INET6Glue if available to
    support making ipv6 connections. (Note that if LWPx::ParanoidAgent
    is installed, it defeats this for openid.)
  * Add additional directive quoting styles, to better support nested
    directives. Both triple-single-quote and heredoc quotes can be used.
    (Thanks, Timo Paulssen)
  * Changed license of madduck's python plugins from GPL-2 to BSD-2-clause.
  * po: support language codes in the form of 'es_AR', and 'arn'. (intrigeri)
    Closes: #627844
  * po: Make po4a warn, not error on a malformed document. (intrigeri)
  * Support the Hiawatha web server which sets HTTPS=off rather than not
    setting it. (There does not seem to be a standard here.)

 -- Joey Hess <joeyh@debian.org>  Fri, 03 Jun 2011 14:38:23 -0400

ikiwiki (3.20110430) unstable; urgency=low
