@@ -29,6 +29,8 @@ ikiwiki (3.20110609) UNRELEASED; urgency=low
     mode) (smcv)
   * inline: Handle obfuscated urls, such as the mailto urls generated by
     markdown when forcing urls absolute.
+  * Bugfix for wikilink containing an email address not showing up in 
+    brokenlinks list.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 09 Jun 2011 10:06:44 -0400
 
